--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>api-passenger</module>
         <module>service-verificationcode</module>
         <module>internal-common</module>
+        <module>service-passenger-user</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,6 +33,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pheonix</groupId>
+            <artifactId>internal-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
