--- a/service-map/src/main/resources/application.yml
+++ b/service-map/src/main/resources/application.yml
@@ -9,6 +9,12 @@ spring:
   application:
     name: service-map
 
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/service-map?characterEncoding=utf-8&serverTimezone=GMT%2B8
+    username: root
+    password: shaoyu12
+
 # 高德地图对应的 key值
 amap:
   key: 6e630e42d904c7a4a06fa189e16837f1
